# sphinx-multiversion-with-poetry-dynamic-versioning

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish-docs.yml
docs/: redirector.html
docs/src/: conf.py
jupyter_execute/notebooks/: Demonstration-Notebook.ipynb
main/: .buildinfo  genindex.html  index.html  notebooks.html  objects.inv  py-modindex.html  python-api.html  search.html  searchindex.js
main/.doctrees/: environment.pickle  index.doctree  notebooks.doctree  python-api.doctree
main/_modules/: index.html
main/_sources/: index.md.txt  notebooks.md.txt
main/notebooks/: Demonstration-Notebook.html
src/example_package/: __init__.py  cow.py
v0.0.1/: .buildinfo  genindex.html  index.html  py-modindex.html  python-api.html  search.html
v0.0.1/.doctrees/: environment.pickle  index.doctree  python-api.doctree
v0.0.1/_modules/: index.html
v0.0.2/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  python-api.html  search.html  searchindex.js
v0.0.2/.doctrees/: environment.pickle  index.doctree  python-api.doctree
v0.0.2/_modules/: index.html
v0.0.3/: .buildinfo  genindex.html  index.html  py-modindex.html  python-api.html  search.html  searchindex.js
v0.0.3/.doctrees/: environment.pickle  index.doctree  python-api.doctree
v0.0.3/_modules/: index.html
v0.0.3/_sources/: python-api.md.txt
v0.0.4/: .buildinfo  genindex.html  index.html  py-modindex.html  python-api.html  search.html  searchindex.js
v0.0.4/.doctrees/: environment.pickle  index.doctree  python-api.doctree
v0.0.4/_modules/: index.html
(+10 files in other folders)
