[tool.poetry]
name = "sphinx-multiversion-with-poetry-dynamic-versioning"
version = "0.0.1"
description = "Demonstrating the ability to use sphinx-multiversion with poetry dynamic versioning through github pages."
authors = ["d33bs <dave.bunten@cuanschutz.edu>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [{include = "example_package", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
cowsay = "^6.1"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.0.2"
myst-parser = "^4.0.0"

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.setuptools_scm]
root = "."
